--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Создаю сайты, которые приносят клиентов и увеличивают прибыль бизнесу | Веб-Студия полного цикла - MuraDevv</title>
-    <meta rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="./images/favicon.png" type="image/png">
     <meta property="og:site_name" content="Веб-Студия полного цикла - MuraDevv">
     <meta property="og:locale" content="ru_RU">
     <meta property="og:title" content="Создаю сайты, которые приносят клиентов и увеличивают прибыль бизнесу | Веб-Студия полного цикла - MuraDevv">
@@ -346,29 +346,14 @@
           </div>
           <div class="block4__tab-price-container">
             <div class="block4__tab-price">
-              <p class="block4__tab-price-title">Landing Page</p>
-              <p class="block4__tab-price-price">от 60.000 ₽</p>
-              <p class="block4__tab-price-time">~ 30 дней</p>
+              <p class="block4__tab-price-title">Разработка логоипа</p>
+              <p class="block4__tab-price-price">от 5.000 ₽</p>
+              <p class="block4__tab-price-time">~ 7 дней</p>
             </div>
             <div class="block4__tab-price">
-              <p class="block4__tab-price-title">Многостраничный сайт</p>
-              <p class="block4__tab-price-price">от 80.000 ₽</p>
-              <p class="block4__tab-price-time">~ 30 дней</p>
-            </div>
-            <div class="block4__tab-price">
-              <p class="block4__tab-price-title">Интернет-магазин</p>
-              <p class="block4__tab-price-price">от 80.000 ₽</p>
-              <p class="block4__tab-price-time">~ 30 дней</p>
-            </div>
-            <div class="block4__tab-price">
-              <p class="block4__tab-price-title">Сайт-визитка</p>
-              <p class="block4__tab-price-price">от 40.000 ₽</p>
-              <p class="block4__tab-price-time">~ 14 дней</p>
-            </div>
-            <div class="block4__tab-price">
-              <p class="block4__tab-price-title">Поддержка сайта</p>
-              <p class="block4__tab-price-price">2.000 ₽/ч</p>
-              <p class="block4__tab-price-time">~ 1 день</p>
+              <p class="block4__tab-price-title">Разработка брендбука</p>
+              <p class="block4__tab-price-price">от 10.000 ₽</p>
+              <p class="block4__tab-price-time">~ 7 дней</p>
             </div>
           </div>
         </div>
